# getai

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml
getai/: __init__.py  __main__.py  api.py  dataset_downloader.py  dataset_search.py  getai_config.yaml  main.py  model_downloader.py  model_search.py  session_manager.py  utils.py
getai/api/: __init__.py  datasets.py  models.py  utils.py
getai/cli/: __init__.py  cli.py  utils.py
getai/core/: __init__.py  dataset_downloader.py  dataset_search.py  model_downloader.py  model_search.py  session_manager.py  utils.py
getai/examples/: example_getai_stanfordnlp_imdb_dataset.py
models/lmsys_vicuna-7b-v1.5/: README.md  config.json  generation_config.json  huggingface-metadata.txt
models/meta-llama_Llama-2-7b-chat-hf/: huggingface-metadata.txt  model-00001-of-00002.safetensors  model-00002-of-00002.safetensors  tokenizer.model
models/meta-llama_Llama-2-7b-hf/: README.md  huggingface-metadata.txt  model-00001-of-00002.safetensors  model-00002-of-00002.safetensors  tokenizer.model
