[tool.poetry]
name = "getai"
version = "0.0.986"
description = "GetAI - An asynchronous AI search and download tool for AI models, datasets, and tools. Designed to streamline the process of downloading machine learning models, datasets, and more."
authors = ["Ben Gorlick <ben@unifiedlearning.ai>"]
license = "MIT - with attribution"
readme = "README.md"
include = ["getai/getai_config.yaml"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.3"
aiofiles = "^23.2.1"
prompt-toolkit = "^3.0.43"
rainbow-tqdm = "^0.1.5"
types-aiofiles = "^0.1.0"
tenacity = "^8.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.17.0"
pytest-cov = "^3.0.0" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
getai = "getai.__main__:run"
